v1.2版本全面升级控制台，增强AI能力